refactor: move animal code to animal service and delete generate token from admin section
